	* Fixed an issue that prevented custom parsed attributes from working on xmls with hugeass comments at the beginning of the file
	* Fixed an issue where the console would behave sporadically when closed with numpad enter
	* Fixed MC_POST_SFX_PLAY not firing properly when there was no PRE added.
/newline/
/newline/
v1.0.6b -
Fixes:
* Fixed an issue that caused gamepad to be calling undo mods when going down on the mods menu
* Fixed an issue that made search and undo mods not work if you didnt restart your machine for 24 days (blame microsoft)
/newline/
/newline/
v1.0.6a -
Additions:
* Minimap :
	- GetState
	- GetHoldTime
	- GetItemIconsSprite
	- GetIconsSprite
	- [Get/Set]ShakeDuration
	- [Get/Set]ShakeOffset
/newline/
Fixes:
* Fixed an issue that made it so custom completion marks and achievements are not properly loaded locked or unlocked on a session(big oof, I know).
/newline/
/newline/
v1.0.6 -
Additions:
* Weapon :
	- SetModifiers
* Added a MeetsVersion(targetversionstring) function to the REPENTOGON global
* Added support for content on bosscolors.xml
* Added EntityNPC:GetBossColorIdx() returns the bosscoloridx or -1 if its not a bosscolor.
* Added Isaac.GetBossColorIdxByName() returns the bosscoloridx or -1 if its not a bosscolor name (you have to give them a unique name for this to work).
* Added Chinese translation text, thanks @502y
* Added support for the pocketActive param in players.xml(I forgor)
* Added MC_PRE_PICKUP_VOIDED(EntityPickup Pickup, boolean IsBlackRune), MC_PRE_PICKUP_VOIDED_ABYSS(EntityPickup Pickup) and MC_PRE_PICKUP_COMPOSTED(EntityPickup Pickup) callbacks, returning false cancels the pickup getting consumed.
* Modded characters can now donate to the greed donation machine with the vanilla jam percentages
* Entity:
	- CopyStatusEffects has been modified to better suit actual use cases
	- SetColor has been removed, will now always copy ColorParams