@@ -1092,7 +1092,7 @@ Achievement = {
 	REVERSED_THE_HIGH_PRIESTESS = 526, REVERSED_HIGH_PRIESTESS = 526,
 	REVERSED_THE_EMPRESS = 527, REVERSED_EMPRESS = 527,
 	REVERSED_THE_EMPEROR = 528, REVERSED_EMPEROR = 528,
-	REVERSED_THE_HEIROPHANT = 529, RESERVED_HEIROPHANT = 529,
+	REVERSED_THE_HIEROPHANT = 529, REVERSED_HIEROPHANT = 529,
 	REVERSED_THE_LOVERS = 530, REVERSED_LOVERS = 530,
 	REVERSED_THE_CHARIOT = 531, REVERSED_CHARIOT = 531,
 	REVERSED_JUSTICE = 532,
@@ -2525,3 +2525,8 @@ AddEnumToNamespace(BlendMode, {
 	NORMAL = 1,
 	MULTIPLY = 2,
 })
+
+--deprecated enums
+
+Achievement.REVERSED_THE_HEIROPHANT = 529
+Achievement.RESERVED_HEIROPHANT = 529
